compile_tests/tests/compile-fail/attr_after_epilogue.stderr
error: lockjaw macro cannot appear after lockjaw::epilogue!() (../../../compile_tests/tests/compile-fail/attr_after_epilogue.rs:27:0)
  --> $DIR/attr_after_epilogue.rs:21:5
   |
21 | /     "../../../compile_tests/tests/compile-fail/attr_after_epilogue.rs",
22 | |     ""
   | |______^
   |
   = note: this error originates in the macro `lockjaw::private_prologue` (in Nightly builds, run with -Z macro-backtrace for more info)

error: impl expected
  --> $DIR/attr_after_epilogue.rs:28:1
   |
28 | struct Module {}
   | ^^^^^^^^^^^^^^^^
